--- a/source/posts/2015/12-27-podcast-03-48.md.erb
+++ b/source/posts/2015/12-27-podcast-03-48.md.erb
@@ -19,10 +19,19 @@ main_image: "/images/static/03/0348.png"
  - [Simple encryption of ActiveRecord fields](http://blog.iempire.ru/2015/12/18/simple-rails-encryption/)
  - [Composing Microscopic Rails Views With Cells](http://vaidehijoshi.github.io/blog/2015/12/22/composing-microscopic-rails-views-with-cells/)
  - [How does ARGV get set in Ruby?](http://blog.honeybadger.io/what-does-argv-mean-in-ruby/)
+ - [Upgrading to Ruby on Rails 5.0 from Rails 4.2 – application use case](http://dev.mensfeld.pl/2015/12/upgrading-to-ruby-on-rails-5-0-from-rails-4-2-application-use-case/)
+ - [How Ruby 2.2 can cause an out-of-memory server crash](https://evilmartians.com/chronicles/ruby-2_2-oom)
+ - [Introduction to Rails 5 Attributes](http://jakeyesbeck.com/2015/12/20/rails-5-attributes/)
+ - [BioRuby - open source bioinformatics library for Ruby](http://www.bioruby.org/)
 
 ## JavaScript
 
-
+ - [Compiling to WebAssembly: It’s Happening!](https://hacks.mozilla.org/2015/12/compiling-to-webassembly-its-happening/)
+ - [Victory - an ecosystem of modular data visualization components for React](http://victory.formidable.com/)
+ - [React Refetch - a simple, declarative, and composable way to fetch data for React components](https://github.com/heroku/react-refetch)
+ - [Satyr.io - image placeholders with settings](http://satyr.io/)
+ - [Daterangepicker - date range picker component](https://sensortower.github.io/daterangepicker/)
+ - [Colorify.js - a simple, customizable, tiny javascript color extractor](http://colorify.rocks/)
 
 READMORE
 
