--- a/source/posts/2015/12-27-podcast-03-48.md.erb
+++ b/source/posts/2015/12-27-podcast-03-48.md.erb
@@ -16,6 +16,7 @@ main_image: "/images/static/03/0348.png"
 
 ## Ruby
 
+ - [Ruby 2.3.0 Released](https://www.ruby-lang.org/en/news/2015/12/25/ruby-2-3-0-released/)
  - [Simple encryption of ActiveRecord fields](http://blog.iempire.ru/2015/12/18/simple-rails-encryption/)
  - [Composing Microscopic Rails Views With Cells](http://vaidehijoshi.github.io/blog/2015/12/22/composing-microscopic-rails-views-with-cells/)
  - [How does ARGV get set in Ruby?](http://blog.honeybadger.io/what-does-argv-mean-in-ruby/)
