--- a/source/posts/2015/12-27-podcast-03-48.md.erb
+++ b/source/posts/2015/12-27-podcast-03-48.md.erb
@@ -24,6 +24,7 @@ main_image: "/images/static/03/0348.png"
  - [How Ruby 2.2 can cause an out-of-memory server crash](https://evilmartians.com/chronicles/ruby-2_2-oom)
  - [Introduction to Rails 5 Attributes](http://jakeyesbeck.com/2015/12/20/rails-5-attributes/)
  - [BioRuby - open source bioinformatics library for Ruby](http://www.bioruby.org/)
+ - [DRY with_options](http://undefined-reference.org/2015/12/26/drying_your_classes_with_options.html)
 
 ## JavaScript
 
