--- a/source/posts/2015/12-27-podcast-03-48.md.erb
+++ b/source/posts/2015/12-27-podcast-03-48.md.erb
@@ -16,24 +16,15 @@ main_image: "/images/static/03/0348.png"
 
 ## Ruby
 
- - [Ruby 2.3.0 Released](https://www.ruby-lang.org/en/news/2015/12/25/ruby-2-3-0-released/)
- - [Simple encryption of ActiveRecord fields](http://blog.iempire.ru/2015/12/18/simple-rails-encryption/)
- - [Composing Microscopic Rails Views With Cells](http://vaidehijoshi.github.io/blog/2015/12/22/composing-microscopic-rails-views-with-cells/)
- - [How does ARGV get set in Ruby?](http://blog.honeybadger.io/what-does-argv-mean-in-ruby/)
- - [Upgrading to Ruby on Rails 5.0 from Rails 4.2 – application use case](http://dev.mensfeld.pl/2015/12/upgrading-to-ruby-on-rails-5-0-from-rails-4-2-application-use-case/)
- - [How Ruby 2.2 can cause an out-of-memory server crash](https://evilmartians.com/chronicles/ruby-2_2-oom)
- - [Introduction to Rails 5 Attributes](http://jakeyesbeck.com/2015/12/20/rails-5-attributes/)
- - [BioRuby - open source bioinformatics library for Ruby](http://www.bioruby.org/)
- - [DRY with_options](http://undefined-reference.org/2015/12/26/drying_your_classes_with_options.html)
+ - [Ruby 2.3.0 Released](https://www.ruby-lang.org/en/news/2015/12/25/ruby-2-3-0-released/), [Upgrading to Ruby on Rails 5.0 from Rails 4.2 – application use case](http://dev.mensfeld.pl/2015/12/upgrading-to-ruby-on-rails-5-0-from-rails-4-2-application-use-case/) и [Introduction to Rails 5 Attributes](http://jakeyesbeck.com/2015/12/20/rails-5-attributes/)
+ - [Composing Microscopic Rails Views With Cells](http://vaidehijoshi.github.io/blog/2015/12/22/composing-microscopic-rails-views-with-cells/), [How Ruby 2.2 can cause an out-of-memory server crash](https://evilmartians.com/chronicles/ruby-2_2-oom) и [Simple encryption of ActiveRecord fields](http://blog.iempire.ru/2015/12/18/simple-rails-encryption/)
+ - [DRY with_options](http://undefined-reference.org/2015/12/26/drying_your_classes_with_options.html), [How does ARGV get set in Ruby?](http://blog.honeybadger.io/what-does-argv-mean-in-ruby/) и [BioRuby - open source bioinformatics library for Ruby](http://www.bioruby.org/)
 
 ## JavaScript
 
- - [Compiling to WebAssembly: It’s Happening!](https://hacks.mozilla.org/2015/12/compiling-to-webassembly-its-happening/)
- - [Victory - an ecosystem of modular data visualization components for React](http://victory.formidable.com/)
- - [React Refetch - a simple, declarative, and composable way to fetch data for React components](https://github.com/heroku/react-refetch)
- - [Satyr.io - image placeholders with settings](http://satyr.io/)
- - [Daterangepicker - date range picker component](https://sensortower.github.io/daterangepicker/)
- - [Colorify.js - a simple, customizable, tiny javascript color extractor](http://colorify.rocks/)
+ - [Compiling to WebAssembly: It’s Happening!](https://hacks.mozilla.org/2015/12/compiling-to-webassembly-its-happening/) и [Simple Guide to Finding a JavaScript Memory Leak in Node.js](http://www.alexkras.com/simple-guide-to-finding-a-javascript-memory-leak-in-node-js/)
+ - [Javascript Fatigue](https://medium.com/@ericclemmons/javascript-fatigue-48d4011b6fc4), [Victory - an ecosystem of modular data visualization components for React](http://victory.formidable.com/) и [React Refetch - a simple, declarative, and composable way to fetch data for React components](https://github.com/heroku/react-refetch)
+ - [Satyr.io - image placeholders with settings](http://satyr.io/), [Daterangepicker - date range picker component](https://sensortower.github.io/daterangepicker/) и [Colorify.js - a simple, customizable, tiny javascript color extractor](http://colorify.rocks/)
 
 READMORE
 
