--- a/source/posts/2015/12-27-podcast-03-48.md.erb
+++ b/source/posts/2015/12-27-podcast-03-48.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "48 выпуск 03 сезона.  и прочее"
+title: "48 выпуск 03 сезона. Ruby 2.3.0, Rails 5 Attributes, Compiling to WebAssembly, Javascript Fatigue, Satyr.io и прочее"
 date: 2015-12-27
 tags:
  - podcasts
