--- a/source/posts/2015/06-11-cafe-005.md.erb
+++ b/source/posts/2015/06-11-cafe-005.md.erb
@@ -13,7 +13,7 @@ small_icon: mic
 main_image: "/images/static/cafe/005.png"
 ---
 
-Добрый день уважаемые слушатели. В данном кафе поговорим про React.js, Flux, React-Native, React-Router, ImmutableJS, Flow, Babel:
+Добрый день уважаемые слушатели. В данном кафе поговорим про React.js, Flux, React Native, React-Router, ImmutableJS, Flow, Babel:
 
  - [React.js](http://facebook.github.io/react/)
  - [React (and why it’s awesome)](http://www.normative.com/react-and-why-its-awesome/)
