--- a/source/posts/2015/06-11-cafe-005.md.erb
+++ b/source/posts/2015/06-11-cafe-005.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "RWPod Кафе 5: React.js, Flux, React-Native, React-Router, ImmutableJS, Flow, Babel"
+title: "RWPod Кафе 5: React.js, Flux, React Native, React-Router, ImmutableJS, Flow, Babel"
 date: 2015-06-11
 tags:
  - podcasts
