--- a/source/css/v2/layout.sass
+++ b/source/css/v2/layout.sass
@@ -26,6 +26,9 @@ header.header
     float: right
     .navigation
       float: left
+  a.logo img
+    width: 264px
+    height: 197px
 
 .container
   max-width: 960px
