Begin migration on svg

--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -104,6 +104,8 @@
     </div>
   </footer>
 
+  <%= svg_sprite_icons %>
+
   <!-- disqus count -->
   <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
