--- a/source/partials/_subscribe_box.html.erb
+++ b/source/partials/_subscribe_box.html.erb
@@ -3,4 +3,5 @@
   <%= link_to '', "#{default_feeds_url_helper}#{defined?(rss_path) ? rss_path : '/rwpod'}", class: "link icon-rss" %>
   <%= link_to '', 'https://twitter.com/rwpod', class: "link icon-twitter" %>
   <%= link_to '', 'http://www.facebook.com/rwpod', class: "link icon-facebook" %>
+  <%= svg_sprite 'facebook' %>
 </div>
