--- a/source/css/v2/typography.sass
+++ b/source/css/v2/typography.sass
@@ -1,5 +1,6 @@
 body
-  font-family: 'Helvetica Neue', Helvetica, sans-serif
+  // https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
   font-size: 1rem
   font-weight: 400
   line-height: 1.5rem
