--- a/source/partials/_subscribe_box.html.erb
+++ b/source/partials/_subscribe_box.html.erb
@@ -4,4 +4,5 @@
   <%= link_to '', 'https://twitter.com/rwpod', class: "link icon-twitter" %>
   <%= link_to '', 'http://www.facebook.com/rwpod', class: "link icon-facebook" %>
   <%= svg_sprite 'facebook' %>
+  <%= svg_sprite 'twitter' %>
 </div>
