--- a/lib/svg/sprite.svg.erb
+++ b/lib/svg/sprite.svg.erb
@@ -1,6 +1,6 @@
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="rwpod-sprite" style="display:none">
   <% icons.each do |icon| %>
-    <symbol id='<%= icon[:name] %>-icon' viewBox='<%= icon[:viewbox] %>'>
+    <symbol id='<%= icon[:name] %>-svg-icon' viewBox='<%= icon[:viewbox] %>'>
       <%= icon[:shape] %>
     </symbol>
   <% end %>
