--- a/source/css/audio.css.sass
+++ b/source/css/audio.css.sass
@@ -50,7 +50,9 @@
     position: absolute
     overflow: hidden
     font-size: 1.2rem
-    padding: 4px 1px
+    padding: 3px 3px
+  .jp-mute, .jp-unmute
+    padding: 3px 0px
 
 .jp-play, .jp-pause, .jp-mute, .jp-unmute
   z-index: 1
