--- a/source/css/ui.css.sass
+++ b/source/css/ui.css.sass
@@ -3,7 +3,7 @@
 @import "v2/typography"
 @import "v2/layout"
 
-@import "v2/objects/icons"
+//@import "v2/objects/icons"
 @import "v2/objects/navigation"
 @import "v2/objects/subscribe"
 @import "v2/objects/article"
@@ -11,3 +11,4 @@
 @import "v2/objects/box"
 @import "v2/objects/author"
 @import "v2/objects/tags"
+@import "v2/objects/svg_icons"
