--- a/source/css/v2/objects/subscribe.sass
+++ b/source/css/v2/objects/subscribe.sass
@@ -5,8 +5,8 @@
   padding: 14px 20px
   .link
     display: inline-block
-    padding: 9px 0
-    width: 34px
+    padding: 7px 0 3px 0
+    width: 35px
     text-align: center
     background: #d26748
     color: #fff
@@ -15,3 +15,10 @@
     transition: background .3s ease
     &:hover
       background: darken(#d26748, 15%)
+      .svg-icon
+        fill: #a4f5f1
+    .svg-icon
+      width: 20px
+      height: 20px
+      fill: #fff
+
