--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -57,10 +57,7 @@
     <% end %>
     <header class="header">
       <% link_to('/', class: 'logo') do %>
-        <%= image_tag('backgrounds/logo.png',
-          alt: default_title_helper,
-          title: default_title_helper,
-          data: {hidpi: {src: asset_path(:images, 'backgrounds/logo@2x.png')}}) %>
+        <%= image_tag('logo.svg', alt: default_title_helper, title: default_title_helper) %>
       <% end %>
 
       <%= partial "partials/header_bar" %>
