--- a/source/css/v2/objects/author.sass
+++ b/source/css/v2/objects/author.sass
@@ -17,7 +17,7 @@
     a
       display: inline-block
       text-align: center
-      padding: 7px 0 0 0
+      padding: 8px 0 1px 0
       width: 35px
       background: #faf6ec
       color: #d26748
