--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -7,9 +7,9 @@ title: "О нас"
 
 <div class="author mbl">
   <div class="photo">
-    <%= image_tag "about/alexey.png", alt: "Алексей Васильев", title: "Алексей Васильев", data: {
-      hidpi: {src: asset_path(:images, "about/alexey@2x.png")},
-      lowdpi: {src: asset_path(:images, "about/alexey.png")}
+    <%= image_tag "about/alexey.jpg", alt: "Алексей Васильев", title: "Алексей Васильев", data: {
+      hidpi: {src: asset_path(:images, "about/alexey@2x.jpg")},
+      lowdpi: {src: asset_path(:images, "about/alexey.jpg")}
     } %>
   </div>
   <div class="bio">
@@ -44,6 +44,9 @@ title: "О нас"
     <p>Александр является инструктором по верстке в компании Railsware.</p>
   </div>
   <div class="photo">
-    <%= image_tag "about/alex.png", alt: "Александр Чаплинский", title: "Александр Чаплинский" %>
+    <%= image_tag "about/alex.jpg", alt: "Александр Чаплинский", title: "Александр Чаплинский", data: {
+      hidpi: {src: asset_path(:images, "about/alex@2x.jpg")},
+      lowdpi: {src: asset_path(:images, "about/alex.jpg")}
+    } %>
   </div>
 </div>
