--- a/source/partials/_article.html.erb
+++ b/source/partials/_article.html.erb
@@ -21,7 +21,7 @@
 </div>
 <div class="footer pam">
   <hr />
-  <%= link_to "0 Comments and 0 Reactions", "#{default_main_url_helper}#{article.url}#disqus_thread", class: 'icon-chat' %>
+  <%= link_to "0 Comments", "#{default_main_url_helper}#{article.url}#disqus_thread" %>
 </div>
 <!-- for google -->
 <script type="application/ld+json">
