--- a/source/partials/_article_box.html.erb
+++ b/source/partials/_article_box.html.erb
@@ -10,7 +10,7 @@
       </h2>
     </div>
     <div class="footer">
-      <%= link_to "0 Comments and 0 Reactions", "#{default_main_url_helper}#{article_box.url}#disqus_thread", class: 'icon-chat' %>
+      <%= link_to "0 Comments", "#{default_main_url_helper}#{article_box.url}#disqus_thread" %>
     </div>
   </div>
 </div>
