--- a/source/partials/_header_bar.html.erb
+++ b/source/partials/_header_bar.html.erb
@@ -11,10 +11,10 @@
 <div class="right-side">
   <ul class="navigation">
      <li class="<%= current_link_class("posts/categories/podcasts.html") %>">
-			 <%= link_to 'Подкасты', "/posts/categories/podcasts.html" %>
+			 <%= link_to 'Подкасты', tag_path("podcasts") %>
 		 </li>
      <li class="<%= current_link_class("posts/categories/screencasts.html") %>">
-			 <%= link_to 'Скринкасты', "/posts/categories/screencasts.html" %>
+			 <%= link_to 'Скринкасты', tag_path("screencasts") %>
 		 </li>
   </ul>
 </div>
