--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -34,7 +34,7 @@
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application", async: "async" %>
     <!-- rss -->
-    <link href="<%= default_feeds_url_helper %>/rwpod" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml">
+    <link href="<%= default_feeds_url %>" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml">
     <!-- GA BEGIN -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
