--- a/source/partials/_subscribe_box.html.erb
+++ b/source/partials/_subscribe_box.html.erb
@@ -1,8 +1,8 @@
 <div class="subscribe">
-  <% link_to default_itunes_url, class: "link" do %>
+  <% link_to default_itune_url, class: "link" do %>
     <%= svg_sprite 'apple' %>
   <% end %>
-  <% link_to default_feeds_url, class: "link" do %>
+  <% link_to default_feed_url, class: "link" do %>
     <%= svg_sprite 'rss' %>
   <% end %>
   <% link_to 'https://twitter.com/rwpod', class: "link" do %>
