--- a/source/css/v2/objects/box.sass
+++ b/source/css/v2/objects/box.sass
@@ -12,7 +12,7 @@
       padding: 10px 20px
       border-bottom: 1px solid #d2cec3
       small
-        color: #928e81
+        color: #4e4c46
     .content
       padding: 20px
       min-height: 180px
