--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" xmlns:fb="http://ogp.me/ns/fb#">
+<html lang="en" class="no-js" xmlns:fb="http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8" />
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
