--- a/source/partials/_header_bar.html.erb
+++ b/source/partials/_header_bar.html.erb
@@ -13,8 +13,8 @@
      <li class="<%= current_link_class("posts/categories/podcasts.html") %>">
 			 <%= link_to 'Подкасты', tag_path("podcasts") %>
 		 </li>
-     <li class="<%= current_link_class("posts/categories/screencasts.html") %>">
-			 <%= link_to 'Скринкасты', tag_path("screencasts") %>
+     <li>
+			 <%= link_to 'Скринкасты', "https://www.youtube.com/rwpod" %>
 		 </li>
   </ul>
 </div>
