--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -25,7 +25,7 @@ title: "О нас"
   </div>
 </div>
 
-<div class="author inverse mbl">
+<!-- <div class="author inverse mbl">
   <div class="bio">
     <h1 class="mbm">Александр Чаплинский</h1>
     <div class="contacts">
@@ -48,4 +48,4 @@ title: "О нас"
       lowdpi: {src: asset_path(:images, "about/alex.jpg")}
     } %>
   </div>
-</div>
+</div> -->
