--- a/source/css/ui.css.sass
+++ b/source/css/ui.css.sass
@@ -1,13 +1,16 @@
-@import "vendors/applepie/all"
+@import "base/normalize"
+@import "base/grid"
+@import "base/spaces"
+@import "base/helpers"
 
-@import "v2/typography"
-@import "v2/layout"
+@import "components/typography"
+@import "components/layout"
 
-@import "v2/objects/navigation"
-@import "v2/objects/subscribe"
-@import "v2/objects/article"
-@import "v2/objects/button"
-@import "v2/objects/box"
-@import "v2/objects/author"
-@import "v2/objects/tags"
-@import "v2/objects/svg_icons"
+@import "objects/navigation"
+@import "objects/subscribe"
+@import "objects/article"
+@import "objects/button"
+@import "objects/box"
+@import "objects/author"
+@import "objects/tags"
+@import "objects/svg_icons"
