--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -42,8 +42,8 @@
       <meta property="og:type" content="article" />
       <meta property="og:title" content="<%= current_article.title %>" />
       <meta property="og:url" content="<%= "#{default_main_url_helper}#{current_article.url}" %>" />
-      <meta property="article:published_time" content="<%= current_article.date.strftime('%FT%T') %>" />
-      <meta property="article:modified_time" content="<%= current_article.date.strftime('%FT%T') %>" />
+      <meta property="article:published_time" content="<%= current_article.date.iso8601(3) %>" />
+      <meta property="article:modified_time" content="<%= current_article.date.iso8601(3) %>" />
       <meta property="og:site_name" content="RWpod" />
       <meta property="og:image" content="<%= current_article.data.main_image ? "#{default_main_url_helper}#{current_article.data.main_image}" : "http://placehold.it/200x200&text=RWpod" %>" />
       <meta property="og:image:width" content="600" />
