--- a/source/partials/_article.html.erb
+++ b/source/partials/_article.html.erb
@@ -48,7 +48,7 @@
     "name": "RWpod",
     "logo": {
       "@type": "ImageObject",
-      "url": <%= "#{default_main_url_helper}#{asset_path(:images, "schema_logo.png")}".inspect %>,
+      "url": <%= "#{default_main_url_helper}/images/schema_logo.png".inspect %>,
       "width": 600,
       "height": 60
     }
