--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -6,9 +6,9 @@ title: "О нас"
 
 <div class="author mbl">
   <div class="photo">
-    <%= image_tag "about/alexey.jpg", alt: "Алексей Васильев", title: "Алексей Васильев", data: {
-      hidpi:  {src: asset_path(:images, "about/alexey@2x.jpg")},
-      lowdpi: {src: asset_path(:images, "about/alexey.jpg")}
+    <%= image_tag "/images/about/alexey.jpg", alt: "Алексей Васильев", title: "Алексей Васильев", data: {
+      hidpi:  {src: "/images/about/alexey@2x.jpg"},
+      lowdpi: {src: "/images/about/alexey.jpg"}
     } %>
   </div>
   <div class="bio">
@@ -42,9 +42,9 @@ title: "О нас"
     <p>Александр является инструктором по верстке в компании Railsware.</p>
   </div>
   <div class="photo">
-    <%= image_tag "about/alex.jpg", alt: "Александр Чаплинский", title: "Александр Чаплинский", data: {
-      hidpi:  {src: asset_path(:images, "about/alex@2x.jpg")},
-      lowdpi: {src: asset_path(:images, "about/alex.jpg")}
+    <%= image_tag "/images/about/alex.jpg", alt: "Александр Чаплинский", title: "Александр Чаплинский", data: {
+      hidpi:  {src: "/images/about/alex@2x.jpg"},
+      lowdpi: {src: "/images/about/alex.jpg"}
     } %>
   </div>
 </div> -->
