--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -11,29 +11,29 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
 
     <!-- preloads -->
-    <link rel="preload" href="<%= asset_path(:css, "application") %>" as="style" />
-    <link rel="preload" href="<%= asset_path(:js, "application") %>" as="script" />
-    <link rel="preload" href="<%= asset_path(:images, "logo.svg") %>" as="image" />
+    <link rel="preload" href="<%= asset_pack_path("app.css") %>" as="style" />
+    <link rel="preload" href="<%= asset_pack_path("app.js") %>" as="script" />
+    <link rel="preload" href="/images/logo.svg" as="image" />
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="<%= asset_path(:images, "favicons/apple-touch-icon-152x152-precomposed.png")%>" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/images/favicons/apple-touch-icon-152x152-precomposed.png" />
     <!-- For third-generation iPad with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="<%= asset_path(:images, "favicons/apple-touch-icon-144x144-precomposed.png")%>" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/favicons/apple-touch-icon-144x144-precomposed.png" />
     <!-- For iPhone with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="<%= asset_path(:images, "favicons/apple-touch-icon-114x114-precomposed.png")%>" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/favicons/apple-touch-icon-114x114-precomposed.png" />
     <!-- For first- and second-generation iPad: -->
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="<%= asset_path(:images, "favicons/apple-touch-icon-76x76-precomposed.png")%>" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="<%= asset_path(:images, "favicons/apple-touch-icon-72x72-precomposed.png")%>" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="<%= asset_path(:images, "favicons/apple-touch-icon-60x60-precomposed.png")%>" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/images/favicons/apple-touch-icon-76x76-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/favicons/apple-touch-icon-72x72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/images/favicons/apple-touch-icon-60x60-precomposed.png" />
     <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <link rel="apple-touch-icon-precomposed" href="<%= asset_path(:images, "favicons/apple-touch-icon-precomposed.png")%>" />
+    <link rel="apple-touch-icon-precomposed" href="/images/favicons/apple-touch-icon-precomposed.png" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="<%= asset_path(:images, "favicons/favicon.png")%>" />
-    <link rel="icon" type="image/ico" href="<%= asset_path(:images, "favicons/favicon.ico")%>" />
+    <link rel="shortcut icon" href="/images/favicons/favicon.png" />
+    <link rel="icon" type="image/ico" href="/images/favicons/favicon.ico" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <%= stylesheet_link_tag    "application", media: "all" %>
-    <%= javascript_include_tag "application", async: "async", defer: "defer" %>
+    <%= stylesheet_pack_tag "app" %>
+    <%= javascript_pack_tag "app" %>
     <!-- rss -->
     <link href="<%= default_feed_url %>" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml" />
 
