--- a/webpack/css/components/typography.sass
+++ b/webpack/css/components/typography.sass
@@ -3,7 +3,7 @@ html
 
 body
   // https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
+  font-family: system-ui
   font-size: 1rem
   font-weight: 400
   line-height: 1.5rem
