--- a/webpack/css/app.sass
+++ b/webpack/css/app.sass
@@ -3,6 +3,8 @@
 @import "base/spaces"
 @import "base/helpers"
 
+@import "plyr/dist/plyr.css"
+
 @import "components/typography"
 @import "components/layout"
 
@@ -14,5 +16,4 @@
 @import "objects/author"
 @import "objects/tags"
 @import "objects/svg_icons"
-
-@import "audio"
+@import "objects/audio"
