#5 fix social icons for small screens

--- a/webpack/css/components/layout.sass
+++ b/webpack/css/components/layout.sass
@@ -88,3 +88,15 @@ footer.footer
       display: none
     .col1of2
       width: 100%
+
+@media screen and (max-width: 600px)
+  header.header
+    height: 49px
+    a.logo
+      top: -24px
+      margin-left: -66px
+      img
+        width: 129px
+        height: 97px
+    .left-side, .right-side
+      padding: 13px 0
