--- a/source/partials/_subscribe_box.html.erb
+++ b/source/partials/_subscribe_box.html.erb
@@ -1,14 +1,19 @@
 <div class="subscribe">
-  <% link_to default_itune_url, class: "link", title: "itunes" do %>
-    <%= svg_sprite 'apple' %>
-  <% end %>
-  <% link_to default_feed_url, class: "link", title: "rss" do %>
-    <%= svg_sprite 'rss' %>
-  <% end %>
-  <% link_to 'https://twitter.com/rwpod', class: "link", title: "twitter" do %>
-     <%= svg_sprite 'twitter' %>
-  <% end %>
-  <% link_to 'http://www.facebook.com/rwpod', class: "link", title: "facebook" do %>
-    <%= svg_sprite 'facebook' %>
-  <% end %>
+  <div class="subscribe-first"></div>
+  <div class="subscribe-left">
+    <% link_to default_itune_url, class: "link", title: "itunes" do %>
+      <%= svg_sprite 'apple' %>
+    <% end %>
+    <% link_to default_feed_url, class: "link", title: "rss" do %>
+      <%= svg_sprite 'rss' %>
+    <% end %>
+  </div>
+  <div class="subscribe-right">
+    <% link_to 'https://twitter.com/rwpod', class: "link", title: "twitter" do %>
+      <%= svg_sprite 'twitter' %>
+    <% end %>
+    <% link_to 'http://www.facebook.com/rwpod', class: "link", title: "facebook" do %>
+      <%= svg_sprite 'facebook' %>
+    <% end %>
+  </div>
 </div>
