--- a/webpack/css/objects/subscribe.sass
+++ b/webpack/css/objects/subscribe.sass
@@ -1,8 +1,10 @@
 .subscribe
   max-width: 960px
   margin: 0 auto
-  text-align: right
   padding: 14px 20px
+  display: grid
+  grid-gap: 0
+  grid-template-columns: minmax(100px, 1fr) 80px 80px
   .link
     display: inline-block
     padding: 7px 0 2px 0
@@ -22,3 +24,8 @@
       height: 20px
       fill: #fff
 
+@media screen and (max-width: 600px)
+  .subscribe
+    grid-template-columns: 0 repeat(auto-fit, minmax(80px, 1fr))
+    .subscribe-right
+      text-align: right
