--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -54,6 +54,7 @@
         <meta property="og:audio" content="<%= current_article.data.audio_url %>">
         <meta property="og:audio:type" content="<%= current_article.data.audio_format %>">
       <% end %>
+      <meta name="turbolinks-cache-control" content="no-cache">
     <% end %>
     <!-- GA BEGIN -->
     <script type="text/javascript">
@@ -66,6 +67,9 @@
       ga('send', 'pageview');
     </script>
     <!-- GA END -->
+
+    <%= javascript_pack_tag "app" %>
+    <%= stylesheet_pack_tag "app" %>
 </head>
 <body>
 
@@ -124,23 +128,5 @@
   </footer>
 
   <%= svg_sprite_icons %>
-
-  <%= stylesheet_pack_tag "app" %>
-  <%= javascript_pack_tag "app" %>
-
-  <!-- disqus count -->
-  <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'rwpod'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-  </script>
-
 </body>
 </html>
