--- a/source/partials/_header_bar.html.erb
+++ b/source/partials/_header_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="left-side">
-  <a href="#" class="menu-toggle">
+  <a href="#" class="menu-toggle" aria-label="Toggle mobile menu link">
     <%= svg_sprite 'menu' %>
   </a>
   <ul class="navigation">
