lazy for images

--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -6,7 +6,7 @@ title: "О нас"
 
 <div class="author mbl">
   <div class="photo">
-    <%= image_tag "/images/about/alexey.jpg", alt: "Алексей Васильев", title: "Алексей Васильев", data: {
+    <%= image_tag "/images/about/alexey.jpg", alt: "Алексей Васильев", title: "Алексей Васильев", loading: 'lazy', data: {
       hidpi:  {src: "/images/about/alexey@2x.jpg"},
       lowdpi: {src: "/images/about/alexey.jpg"}
     } %>
