--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,7 @@ per_page: 10
       <% end if page_articles[0..3] && page_articles[0..3].size > 0 %>
     </div>
     <div class="sidebar prm">
-      <%= partial "partials/sidebar", locals: { show_archive: false } %>
+      <%= partial "partials/sidebar" %>
     </div>
   </div>
   <div class="row mbm">
@@ -32,7 +32,7 @@ per_page: 10
       </article>
     </div>
     <div class="sidebar prm">
-      <%= partial "partials/sidebar", locals: { show_archive: true } %>
+      <%= partial "partials/sidebar" %>
     </div>
   </div>
   <div class="row mbm">
