--- a/webpack/css/components/layout.sass
+++ b/webpack/css/components/layout.sass
@@ -2,7 +2,7 @@ html, body
   height: 100%
 
 body
-  background: url('/images/backgrounds/main_bg.png')
+  background: url('~backgrounds/main_bg.png')
 
 .wrapper
   min-height: 100%
