--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -9,7 +9,7 @@ per_page: 25
 
 <ul class="tags-list">
   <% page_articles.each_with_index do |article, i| %>
-    <li><%= link_to article.title, article %>&nbsp;<span><%= article_short_date(article) %></span></li>
+    <li><%= link_to article.title, article %>&nbsp;<span class="date">(<%= article_short_date(article) %>)</span></li>
   <% end %>
 </ul>
 
