fix link to screencasts

--- a/source/partials/_footer_links.html.erb
+++ b/source/partials/_footer_links.html.erb
@@ -5,8 +5,8 @@
   <li class="<%= current_link_class("posts/categories/podcasts.html") %>">
     <%= link_to 'Подкасты', tag_path("podcasts") %>
   </li>
-  <li class="<%= current_link_class("posts/categories/screencasts.html") %>">
-    <%= link_to 'Скринкасты', tag_path("screencasts") %>
+  <li>
+    <%= link_to 'Скринкасты', "https://www.youtube.com/rwpod" %>
   </li>
   <li class="<%= current_link_class("about.html") %>">
     <%= link_to 'О нас', '/about.html' %>
