--- a/source/api/podcasts.json.erb
+++ b/source/api/podcasts.json.erb
@@ -12,8 +12,8 @@ MultiJson.dump(page_articles.each_with_index.map do |article, i|
     description: article.body,
     date: article.date.to_s(:rfc822),
     human_date: article.date.strftime('%d.%m.%Y'),
-    link: "#{default_main_url_helper}#{article.url}",
-    main_img: (article.data.main_image ? "#{default_main_url_helper}#{article.data.main_image}" : default_image_helper),
+    link: full_url(article.url),
+    main_img: (article.data.main_image ? full_url(article.data.main_image) : default_image_helper),
     audio_url: article.data.audio_url,
     audio_mirror_url: article.data.audio_mirror,
     audio_file_size: article.data.audio_length,
