--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -31,23 +31,23 @@
     <link rel="icon" type="image/ico" href="/images/favicons/favicon.ico" />
 
     <!-- rss -->
-    <link href="<%= default_feed_url %>" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml" />
+    <link href="<%= full_url('/rss.xml') %>" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml" />
 
-    <link rel="canonical" href="<%= "#{default_main_url_helper}#{current_page.url}" %>" />
+    <link rel="canonical" href="<%= full_url(current_page.url) %>" />
     <% if is_blog_article? %>
       <meta property="og:type" content="article" />
       <meta property="og:title" content="<%= current_article.title %>" />
-      <meta property="og:url" content="<%= "#{default_main_url_helper}#{current_article.url}" %>" />
+      <meta property="og:url" content="<%= full_url(current_article.url) %>" />
       <meta property="article:published_time" content="<%= current_article.date.iso8601(3) %>" />
       <meta property="article:modified_time" content="<%= current_article.date.iso8601(3) %>" />
       <meta property="og:site_name" content="RWpod" />
-      <meta property="og:image" content="<%= current_article.data.main_image ? "#{default_main_url_helper}#{current_article.data.main_image}" : "http://placehold.it/200x200&text=RWpod" %>" />
+      <meta property="og:image" content="<%= current_article.data.main_image ? full_url(current_article.data.main_image) : "http://placehold.it/200x200&text=RWpod" %>" />
       <meta property="og:image:width" content="600" />
       <meta property="og:image:height" content="600" />
       <meta name="twitter:creator" content="@rwpod" />
       <meta name="twitter:site" content="@rwpod" />
       <meta name="twitter:text:title" content="<%= current_article.title %>" />
-      <meta name="twitter:image" content="<%= current_article.data.main_image ? "#{default_main_url_helper}#{current_article.data.main_image}" : "http://placehold.it/200x200&text=RWpod" %>" />
+      <meta name="twitter:image" content="<%= current_article.data.main_image ? full_url(current_article.data.main_image) : "http://placehold.it/200x200&text=RWpod" %>" />
       <meta name="twitter:card" content="summary_large_image" />
       <% if current_article.data.audio_url %>
         <meta property="og:audio" content="<%= current_article.data.audio_url %>">
