--- a/source/api/podcasts.json.erb
+++ b/source/api/podcasts.json.erb
@@ -8,7 +8,7 @@ MultiJson.dump(page_articles.each_with_index.map do |article, i|
   {
     id: (i + 1),
     title: article.title,
-    summary: (sanitize_tags(truncate(article.body, :length => 150))),
+    summary: (sanitize_tags(truncate(article.body, length: 150))),
     description: article.body,
     date: article.date.to_s(:rfc822),
     human_date: article.date.strftime('%d.%m.%Y'),
