add archive rss, 150

--- a/source/partials/_footer_links.html.erb
+++ b/source/partials/_footer_links.html.erb
@@ -8,6 +8,9 @@
   <li>
     <%= link_to 'Скринкасты', "https://www.youtube.com/rwpod" %>
   </li>
+  <li>
+    <%= link_to 'RSS Архив', '/archive.xml' %>
+  </li>
   <li class="<%= current_link_class("about.html") %>">
     <%= link_to 'О нас', '/about.html' %>
   </li>
