--- a/webpack/css/objects/box.sass
+++ b/webpack/css/objects/box.sass
@@ -9,9 +9,11 @@
     border: 1px solid #d2cec3
     border-top: 5px solid #d2cec3
     .header
+      font-size: 0.9rem
       padding: 10px 20px
       border-bottom: 1px solid #d2cec3
       small
+        font-size: 0.8rem
         color: #4e4c46
     .content
       padding: 20px
