--- a/webpack/css/components/layout.sass
+++ b/webpack/css/components/layout.sass
@@ -63,6 +63,7 @@ footer.footer
   background: #087c78
   color: #fff
   height: 64px
+  font-size: 0.9rem
   ul
     list-style: none
     margin: 0
