--- a/webpack/css/components/typography.sass
+++ b/webpack/css/components/typography.sass
@@ -1,9 +1,8 @@
 html
-  font-size: 1em
+  font-size: responsive 12px 18px
 
 body
   font-family: system-ui
-  font-size: 1rem
   font-weight: 400
   line-height: 1.5rem
   color: #333
@@ -13,7 +12,7 @@ h1, h2, h3, h4, h5, h6
   margin: 0
 
 h1
-  font-size: 1.25rem
+  font-size: 1.2rem
   font-weight: 500
 
 h2
