--- a/webpack/css/components/typography.sass
+++ b/webpack/css/components/typography.sass
@@ -1,5 +1,6 @@
 html
-  font-size: responsive 12px 18px
+  font-size: responsive 14px 18px
+  font-range: 420px 1440px
 
 body
   font-family: system-ui
