--- a/webpack/css/objects/navigation.sass
+++ b/webpack/css/objects/navigation.sass
@@ -5,6 +5,7 @@
   li
     display: inline-block
     padding: 0 15px
+    min-height: 36px
   a
     color: #4f4436
     text-transform: uppercase
@@ -61,7 +62,7 @@
         border-bottom-color: #ffffff
         border-width: 6px
     .right-side &
-      top: 153px
+      top: 145px
       padding-bottom: 5px
       border-radius: 0 0 2px 2px
 
