--- a/webpack/css/objects/navigation.sass
+++ b/webpack/css/objects/navigation.sass
@@ -68,3 +68,9 @@
 
   .menu-toggle
     display: inline-block
+
+@media screen and (max-width: 600px)
+  .navigation
+    top: 48px
+    .right-side &
+      top: 125px
