--- a/webpack/css/objects/audio.sass
+++ b/webpack/css/objects/audio.sass
@@ -53,9 +53,18 @@
   height: 50px
   border: 2px solid #d26748
 
+.footer-audio-player-cover a:hover
+  width: 48px
+  height: 48px
+  border: 4px solid #d26748
+
 .footer-audio-player-cover img
   width: 50px
   height: 50px
+
+.footer-audio-player-cover img:hover
+  width: 48px
+  height: 48px
 
 .footer-audio-player-container
   flex: 1
@@ -69,8 +78,13 @@
   justify-content: center
   background-color: #FFF
   background-image: none
-  border: 2px solid #00b3ff
-  color: #00b3ff
+  border: 1px solid #CCC
+  color: #4a5464
+
+.footer-audio-player-close-button:hover
+  border: 1px solid #CCC
+  color: #FFF
+  background-color: #00b3ff
 
 .footer-audio-player-close-button:focus:not(:focus-visible)
   outline: none
