--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -6,7 +6,16 @@ title: "О нас"
 
 <div class="author mbl">
   <div class="photo">
-    <%= image_tag "/images/about/alexey.jpg", alt: "Алексей Васильев", title: "Алексей Васильев", loading: 'lazy', srcset: "/images/about/alexey.jpg, /images/about/alexey@2x.jpg 2x" %>
+    <picture>
+      <source
+        srcset="/images/about/alexey.jpg.webp, /images/about/alexey@2x.jpg.webp 2x"
+        type="image/webp">
+      <source
+        srcset="/images/about/alexey.jpg, /images/about/alexey@2x.jpg 2x"
+        type="image/jpeg">
+      <!-- fallback for browsers that don't support picture -->
+      <%= image_tag "/images/about/alexey.jpg", alt: "Алексей Васильев", title: "Алексей Васильев", loading: 'lazy', srcset: "/images/about/alexey.jpg, /images/about/alexey@2x.jpg 2x" %>
+    </picture>
   </div>
   <div class="bio">
     <h1 class="mbm">Алексей Васильев</h1>
