--- a/source/partials/_article.html.erb
+++ b/source/partials/_article.html.erb
@@ -1,4 +1,5 @@
 <%- article_img = article.data.main_image || "http://placehold.it/600x600&text=RWpod" -%>
+<%- article_img_size = 134 -%>
 <div class="header row">
   <div class="left"><%= truncated_article_title(article) %></div>
   <div class="right"><small><%= article_date(article) %></small></div>
@@ -6,13 +7,13 @@
 <div class="content">
   <div class="row">
     <div class="col1of4 prs">
-      <%= image_tag "#{article_img}?width=134&height=134",
-          srcset: "#{article_img}?width=134&height=134, #{article_img}?width=268&height=268 2x",
+      <%= image_tag "#{article_img}?width=#{article_img_size}&height=#{article_img_size}",
+          srcset: "#{article_img}?width=#{article_img_size}&height=#{article_img_size}, #{article_img}?width=#{article_img_size * 2}&height=#{article_img_size * 2} 2x",
           alt: article.title,
           title: article.title,
           loading: 'lazy',
-          width: '134',
-          height: '134' %>
+          width: article_img_size,
+          height: article_img_size %>
     </div>
     <div class="col3of4">
       <h1 class="mbs">
