--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -112,6 +112,7 @@
   </footer>
 
   <%= partial "partials/footer_audio_player" %>
+  <%= partial "partials/sw_notification" %>
 
   <%= svg_sprite_icons %>
 </body>
