--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -7,6 +7,7 @@
     <meta name="keywords" content="<%= default_keywords_helper %>">
     <meta name="description" content="<%= default_description_helper %>">
     <link type="text/plain" rel="author" href="/humans.txt" />
+    <link rel="manifest" href="/manifest.json" />
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
 
