use one favicon

--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon-precomposed" href="/images/favicons/apple-touch-icon-precomposed.png" />
     <!-- favicon -->
     <link rel="shortcut icon" href="/images/favicons/favicon.png" />
-    <link rel="icon" type="image/ico" href="/images/favicons/favicon.ico" />
+    <link rel="icon" type="image/ico" href="/favicon.ico" />
 
     <!-- rss -->
     <link href="<%= full_url('/rss.xml') %>" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml" />
